# EduVerse

./: README copy.md  README.md  package-lock.json  package.json
AR-Server/: main.js  package.json
Socket-Server/: package.json  server.js
backend/: index.js  middleware.js  package.json
backend/ML/: NullPointer.js  NullPointerD.js  langchain.js
backend/models/: user.js
backend/routes/: account.js  assignment.js  assignment_submission.js  attendance.js  index.js  student.js  teacher.js  user.js
contracts/: Move.toml
contracts/sources/: ClassroomManagement.move
llamaindex_app/: app.py  config.py  load_documents.py  main.py  pyproject.toml  requirements.txt
src/: Experience.js  Player.js  Player2.js  Socketmanager.js  index.js  style.css
src/Component/: AlertMessage.js  AptosFunctions.js  AskQuestion.js  AskaiInput.js  AssignmentBox.js  AttendanceAlert.js  AttendanceManager.js  AttendanceResults.js  Authorize.js  ClassList.js  Distanceto.js  DistancetoConferenceHall.js  Doubt.js  DoubtPanel.js  File.js  FileSchool.js  GlobalChat.js  GlobalChatButton.js  MenuClass.js  MenuConferenceHall.js  MenuOffice.js  MessagBoxclassroom.js  MessageBox.js  ModSimulator.js  ModelBox.js  MusicIFrame.js  NewsIframe.js  PresenterContentbox.js  PresenterSwitchPanel.js  ProcessML.js  ProcessMLclassroom.js  ProfileButton.js  ProfileDialog.js  ProfileManager.js  QuestMenu.js  QuestNotification.js  QuestSlider.js  RankBoard.js  SelectiveRender.js  SelectiveRenderClass.js  (+13 more)
src/Hooks/: useFetch.js
src/Iframe/: LeaderBoard.js
src/Models/: BotClass.js  BotOffice.js  CarPodium.js  (+8 more)
(+35 files in other folders)
