[tool.poetry]
name = "llamaindex-app"
version = "0.1.0"
description = ""
authors = ["NeonKazuha <tanudeshtd2005@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
python-dotenv = "^1.0.1"
google-generativeai = "^0.3.2"
llama-index = "^0.10.0"
pyttsx3 = "^2.90"
fastapi = "^0.110.0"
uvicorn = "^0.27.1"
python-multipart = "^0.0.9"
streamlit = "^1.32.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
